--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@ a {
 
 .dark-theme {
     position: absolute;
+    display: inline;
     margin-top: 75px;
     right: 30px;
     top: 30px;
